--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,29 @@
 
     <string name="app_name">NOMP-Mobile</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    
+    <!-- Text for ticket form -->
+    <string name="text_label_title">Title</string>
+    <string name="text_hint_title">Enter a title for the ticket</string>
+    <string name="text_label_classification">Classification</string>
+    <string name="text_button_classification">Select classification</string>
+    <string name="text_label_target">Target</string>
+    <string name="text_button_target">Select target actor</string>
+    <string name="text_label_period">Period</string>
+    <string name="text_button_period_from">Start date</string>
+    <string name="text_button_period_to">End date</string>
+    <string name="text_seperator_period"> - </string>
+    <string name="text_label_quantity">Quantity</string>
+    <string name="text_hint_quantity">Enter a quantity</string>
+    <string name="text_label_price">Price</string>
+    <string name="text_hint_price">Enter a price</string><!-- holder for the field cost/budget -->
+    <string name="text_hint_price_cost">Enter the cost</string>
+    <string name="text_hint_price_budget">Enter the budget</string>
+    <string name="text_label_description">Description</string>
+    <string name="text_hint_description">Enter a description for the ticket</string>
+    <string name="text_label_location">Location</string>
+    <string name="text_hint_location">Enter a location</string>
+    <string name="text_label_photo">Photos</string>
+    <string name="text_button_photo">Add photo</string>
 
 </resources>
