add db schema & crud, ticket form action, #2, #3

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,5 +27,8 @@
     <string name="text_hint_location">Enter a location</string>
     <string name="text_label_photo">Photos</string>
     <string name="text_button_photo">Add photo</string>
+    
+    <!-- Action bar items -->
+    <string name="text_ticket_form_send">Send ticket</string>
 
 </resources>
