--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,14 +3,24 @@
 
     <string name="app_name">NOMP-Mobile</string>
     <string name="action_settings">Settings</string>
+    
+    <!-- Text for sign up form -->
+    <string name="text_label_full_name">Full name:</string>
+    <string name="text_hint_full_name">Enter your full name</string>
+    <string name="text_label_email">Email:</string>
+    <string name="text_hint_email">Enter an email address</string>
+    <string name="text_label_username">Username:</string>
+    <string name="text_hint_username">Enter an username</string>
+    <string name="text_label_password">Password</string>
+    <string name="text_hint_password">Enter your password</string>
+    <string name="text_label_source">Identity:</string>
+    <string name="text_label_sub_source">Sub identity:</string>
 
     <!-- Text for ticket form -->
     <string name="text_label_title">Title:</string>
     <string name="text_hint_title">Enter a title for the ticket</string>
     <string name="text_label_classification">Classification:</string>
     <string name="text_button_classification">Update classification</string>
-    <string name="text_label_source">Source:</string>
-    <string name="text_button_source">Select source actor</string>
     <string name="text_label_target">Target:</string>
     <string name="text_button_target">Update actor</string>
     <string name="text_label_period">Period:</string>
@@ -42,5 +52,6 @@
     <string name="title_activity_ticket_form">TicketFormActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_ticket_page">TicketPageActivity</string>
+    <string name="title_activity_sign_up">SignUpActivity</string>
 
 </resources>
