--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -48,6 +48,15 @@
     <string name="text_content_description_gps_loader">GPS</string>
     <string name="text_label_photo">Photos</string>
     <string name="text_button_photo">Add photo</string>
+    
+    <!-- Text for address dialog -->
+    <string name="text_address_dialog_title">Enter address</string>
+    <string name="text_hint_road">Road name</string>
+    <string name="text_hint_postal_code">Postal code</string>
+    <string name="text_hint_city">City</string>
+    <string name="text_hint_country">Country</string>
+    <string name="text_address_dialog_button_positive">OK</string>
+    <string name="text_address_dialog_button_negative">Cancel</string>
 
     <!-- Error message for login -->
     <string name="error_incorrect_email">Incorrect email address</string>
